--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,50 +1,93 @@
 <div class="background" [style.background-image]="'url(' + SelectedChampionSplash + ')'"></div>
-<div style="text-align:center;">
-  <h1>
-    Welcome!
-  </h1>
-</div>
 <mat-drawer-container autosize>
-  <mat-drawer style="background-color:black;" [(opened)]="isInfoShown" mode="side" position="end">
-    <div class="infobackground" [style.background-image]="'url(' + SelectedChampionLoading + ')'" *ngIf="SelectedChampionInfo">
+  <mat-drawer style="overflow-x: hidden;background-color:black;width:320px" [(opened)]="isInfoShown"
+    mode="side" position="end">
+    <div style="width: 300px;height:650px" class="infobackground" *ngIf="SelectedChampionInfo">
+      <img style="width: 100%;height: 100%;" src="{{SelectedChampionLoading}}">
     </div>
-    <div class="infocontent" *ngIf="SelectedChampionInfo">
-      <p style="text-align:center">{{SelectedChampionInfo.name}}<br>{{SelectedChampionInfo.title}}</p>
-      <p [innerHTML]="SelectedChampionInfo.blurb"></p>
-      <div class="spells">
-        <mat-expansion-panel >
-          <mat-expansion-panel-header [collapsedHeight]="'64px'">
-            <mat-panel-title>
-              <img src="{{getPassiveImage()}}">
+    <div style="width: 300px" class="infocontent" *ngIf="SelectedChampionInfo">
+      <div style="width:300px">
+        <button (click)="ChangeTab($event)" style="width: 100px; height: 50px;padding: 0px">Abilities</button>
+        <button (click)="ChangeTab($event)" style="width: 100px; height: 50px;padding: 0px">Lore</button>
+        <button (click)="ChangeTab($event)" style="width: 100px; height: 50px;padding: 0px">Skins</button>
+      </div>
+      <p style="text-align:center; width: 300px">{{SelectedChampionInfo.name}}<br>{{SelectedChampionInfo.title}}</p>
+      <div *ngIf="CurrentTab == 'Abilities'">
+        <mat-accordion>
+          <div class="spells">
+            <mat-expansion-panel>
+              <mat-expansion-panel-header [collapsedHeight]="'64px'">
+                <mat-panel-title>
+                  <img src="{{getPassiveImage()}}">
+                </mat-panel-title>
+                <mat-panel-description>
+                  <p>{{SelectedChampionInfo.passive.name}}</p>
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <p [innerHTML]="SelectedChampionInfo.passive.description"></p>
+            </mat-expansion-panel>
+          </div>
+          <div class="spells" *ngFor="let number of [0,1,2,3]">
+            <mat-expansion-panel>
+              <mat-expansion-panel-header [collapsedHeight]="'64px'">
+                <mat-panel-title>
+                  <img src="{{getSpellImage(SelectedChampionInfo.spells[number].image.full)}}">
+                </mat-panel-title>
+                <mat-panel-description>
+                  <p [innerHTML]="SelectedChampionInfo.spells[number].name"></p>
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <p [innerHTML]="SelectedChampionInfo.spells[number].description"></p>
+            </mat-expansion-panel>
+          </div>
+        </mat-accordion>
+        <br>
+        <label style="margin-left:10px;">Level:</label>
+        <mat-slider [(value)]="Level" class="cdk-focused" thumbLabel tickInterval="1" min="1" max="18"></mat-slider>
+        <div class="stats">
+          <ul>
+            <li *ngFor="let stat of StatNames; let i = index">
+                {{stat}}: <span style="color:gold;float: right;">{{(this.Stats[i*2] + this.Stats[1 + i*2] * this.Level).toFixed(2)}}</span>
+            </li>
+            <li>
+                MoveSpeed: <span style="color:gold;float: right;">{{this.SelectedChampionInfo.stats.movespeed}}</span>
+            </li>
+            <li>
+                AtkRange: <span style="color:gold;float: right;">{{this.SelectedChampionInfo.stats.attackrange}}</span>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+      <div *ngIf="CurrentTab == 'Lore'">
+        <mat-expansion-panel [@.disabled]="true" [expanded]="LoreShown" (opened)="LoreShown = true" (closed)="LoreShown = false">
+          <mat-expansion-panel-header [collapsedHeight]="'auto'" [expandedHeight]="'0px'">
+            <mat-panel-title style="width: 242px">
+              <p [innerHTML]="LoreShown ? ' ' : SelectedChampionInfo.blurb"></p>
             </mat-panel-title>
-            <mat-panel-description>
-              <p>{{SelectedChampionInfo.passive.name}}</p>
-            </mat-panel-description>
           </mat-expansion-panel-header>
-          <p [innerHTML]="SelectedChampionInfo.passive.description"></p>
+          <p style="overflow: auto; width: 260px; height: 700px;padding-right: 10px" (click)="LoreShown = false"
+            [innerHTML]="SelectedChampionInfo.lore"></p>
         </mat-expansion-panel>
       </div>
-      <div class="spells" *ngFor="let number of [0,1,2,3]">
-        <mat-expansion-panel>
-          <mat-expansion-panel-header [collapsedHeight]="'64px'">
-            <mat-panel-title>
-              <img src="{{getSpellImage(SelectedChampionInfo.spells[number].image.full)}}">
-            </mat-panel-title>
-            <mat-panel-description>
-              <p [innerHTML]="SelectedChampionInfo.spells[number].name"></p>
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <p [innerHTML]="SelectedChampionInfo.spells[number].description"></p>
-        </mat-expansion-panel>
+      <div style="width: 280px;" *ngIf="CurrentTab == 'Skins'">
+        <div style="height: 70vh" *ngFor="let skin of SelectedChampionInfo.skins">
+            <mat-card  title="{{skin.name}}">
+            <img style="width: 100%;" (click)="setSkin(skin.num)" title="{{skin.name}}" src="{{getLoadingImage(skin.num)}}" alt="{{skin.name}}">
+            <mat-card-content style="background-color: black">
+              <p style="text-align:center">{{skin.name}}</p>
+            </mat-card-content>
+          </mat-card>
+        </div>
       </div>
     </div>
   </mat-drawer>
   <div class="card-holder" *ngIf="ready">
-    <mat-card class="card" *ngFor="let champion of champions" (click)="ChampionSelected($event)"
+    <mat-card *ngFor="let champion of champions" (click)="ChampionSelected($event)"
       title="{{champion.id}}">
-      <img title="{{champion.id}}" src="{{getPortraitImage(champion.image.full)}}" alt="{{champion.id}}">
+      <img style="width:100%;height:100%;" title="{{champion.id}}" src="{{getPortraitImage(champion.image.full)}}" alt="{{champion.id}}">
       <mat-card-content>
-        <p title="{{champion.id}}">{{champion.name}}</p>
+        <p style="text-align:center" title="{{champion.id}}">{{champion.name}}</p>
       </mat-card-content>
     </mat-card>
   </div>
